--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
  <a href="zadanie14_Rusin.html" target="strony">zadanie 14</a>
  <br>
  <a href="zadanie15_Rusin.html" target="strony">zadanie 15</a>
+ <br>
+ <a href="zad16t_Rusin.html"target="strony">Zadanie 16</a>
+ <br>
+ <a href="zad17.1t_Rusin.html"target="strony">Zadanie 17.1</a>
+ <br>
+ <a href="zad17.2t_Rusin.html"target="strony">Zadanie 17.2</a>
+ <br>
+ <a href="zad18_Rusin.html"target="strony">Zadanie 18</a>\
+ <br>
+ <a href="zad19t_Rusin.html"target="strony">Zadanie 19</a>
+ <br>
+ <a href="zadanie20_Rusin.html"target="strony">Zadanie 20</a>\
+ <br>
+ <a href="zadanie21_Rusin.html"target="strony">Zadanie 21</a>
+ <br>
+ <a href="zad22_Rusin.html"target="strony">Zadanie 22</a>
+<br>
+ <a href="zadanie23_Rusin.html"target="strony">Zadanie 23</a>
  </td>
 
  <td align=center><iframe width=1000 height=750 name="strony" src="start_Rusin.html" border="0"></iframe>
@@ -51,7 +69,14 @@
     <a href="kod_zadanie5_4_Rusin.html" target="strony">Z5_kod(zewnetrzny)</a><br>
     <a href="kod_zadanie6_Rusin.html" target="strony">Z6_kod</a><br>
     <a href="kod_zadanie13_Rusin.html" target="strony">Z13_kod</a><br>
-    <a href="kod_zadanie15_Rusin.html" target="strony">Z15_kod</a>
+    <a href="kod_zadanie15_Rusin.html" target="strony">Z15_kod</a><br>
+    <a href="zadanie17_p1_kod_Rusin.html" target="strony">Zadanie 17.1</a><br>
+    <a href="zadanie17_p2_kod_Rusin.html" target="strony">Zadanie 17.2</a><br>
+    <a href="zadanie18_kod_Rusin.html" target="strony">Zadanie 18</a><br>
+    <a href="zadanie19_kod_Rusin.html" target="strony">Zadanie 19</a><br>
+    <a href="kod_zadanie20_Rusin.html" target="strony">Zadanie 20</a><br>
+    <a href="kod_zadanie22_Rusin.html" target="strony">Zadanie 22</a><br>
+    <a href="kod_zadanie23_Rusin.html" target="strony">Zadanie 23</a>
  </td>
  </tr>
 </table>
