--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
  <a href="zad22_Rusin.html"target="strony">Zadanie 22</a>
 <br>
  <a href="zadanie23_Rusin.html"target="strony">Zadanie 23</a>
+     <br>
+     <a href="Rusin_32.html"target="strony">Zadanie 32</a><br>
+     <a href="Rusin_33.html"target="strony">Zadanie 33</a><br>
+     <a href="Rusin_34.html"target="strony">Zadanie 34</a><br>
+     <a href="Rusin_35.html"target="strony">Zadanie 35</a><br>
+     <a href="Rusin_36.html"target="strony">Zadanie 36</a><br>
  </td>
 
  <td align=center><iframe width=1000 height=750 name="strony" src="start_Rusin.html" border="0"></iframe>
@@ -76,7 +82,10 @@
     <a href="zadanie19_kod_Rusin.html" target="strony">Zadanie 19</a><br>
     <a href="kod_zadanie20_Rusin.html" target="strony">Zadanie 20</a><br>
     <a href="kod_zadanie22_Rusin.html" target="strony">Zadanie 22</a><br>
-    <a href="kod_zadanie23_Rusin.html" target="strony">Zadanie 23</a>
+    <a href="kod_zadanie23_Rusin.html" target="strony">Zadanie 23</a><br>
+    <a href="kod33.md" target="strony">Zadanie 33</a><br>
+    <a href="kod34.md" target="strony">Zadanie 34</a><br>
+    <a href="kod36.md" target="strony">Zadanie 36</a>
  </td>
  </tr>
 </table>
