--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 <br>
  <a href="zadanie23_Rusin.html"target="strony">Zadanie 23</a>
      <br>
-     <a href="Rusin_32.html"target="strony">Zadanie 32</a><br>
-     <a href="Rusin_33.html"target="strony">Zadanie 33</a><br>
-     <a href="Rusin_34.html"target="strony">Zadanie 34</a><br>
-     <a href="Rusin_35.html"target="strony">Zadanie 35</a><br>
-     <a href="Rusin_36.html"target="strony">Zadanie 36</a><br>
+     <a href="Rusin_z32.html"target="strony">Zadanie 32</a><br>
+     <a href="Rusin_z33.html"target="strony">Zadanie 33</a><br>
+     <a href="Rusin_z34.html"target="strony">Zadanie 34</a><br>
+     <a href="Rusin_z35.html"target="strony">Zadanie 35</a><br>
+     <a href="Rusin_z36.html"target="strony">Zadanie 36</a><br>
  </td>
 
  <td align=center><iframe width=1000 height=750 name="strony" src="start_Rusin.html" border="0"></iframe>
